# pod-embedded

./: .ccls  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMAKE_README.md  CMakeLists.txt  Makefile  README.md  compile_commands.json  coverage.xml  datagen.py  deploy.sh  et --hard 64d40e5e7c9e0bcd4f2ca4d2cabd69ba3e918f50  gen_compile_commands
.github/: pull_request_template.md
2/: index.html
BMS_Profiles/: BMSDischargeProfile.o2bms  Charging Mode - Halfpack 1.o2bms  Charging Mode - Halfpack 2.o2bms
Test/: CMakeCache.txt  CMakeLists.txt  README.md  Test_components.cpp  Test_embedded.cpp  run_all_tests.cpp
Test/batt_test/: Test_batt.cpp
Test/components/CAN/: Test_CAN.cpp
Test/components/HV_Iox/: Test_HV_Iox.cpp
Test/components/RMS/: Test_RMS.cpp
Test/dev/: LogPrinter.cpp
Test/development/: LogPrinter.cpp  Test_Development.c++  Test_Development.cpp
Test/example/: Test_GTest.cpp  Test_imu.cpp  t_test.cpp
Test/functional/: Test_State_Machine.cpp
Test/include/: LogPrinter.h  gtest_globals.h
Test/logging/: logger.h
Test/run_profiles/: Test_load_software_parameters.cpp  t_load_software_parameters.cpp
Test/run_profiles/Test_profiles/: bad_values_profile.txt  invalid_format_profile.txt  nominal_profile.txt
autocoding/: autocode.py  data.xml  generators.py  util.py
dashboard/: .env  .gitignore  README.md  app.js  client.js  constants.js  database.js  generateLineChart.js  index.html  package-lock.json  package.json  proto.html  server.js
data_logs/: README.md
embedded/: .travis.yml  Makefile_old  NCD9830DBR2G.c  NCD9830DBR2G.h  README.md  badgerloop.h  can.c  makefile
embedded/app/: CMakeLists.txt  main.c  state_machine.c  state_machine.h
embedded/app/examples/: StateMachineTest.cpp
embedded/app/include/: badgerloop.h  bms_fault_checking.h  hv_iox.h  load_software_parameters.h  motor.h  nav.h  pressure_fault_checking.h  rms_fault_checking.h  software_parameters.h  state_machine.h  states.h  transitions.h
embedded/app/main/: badgerloop.cpp  badgerloop_HV.cpp  badgerloop_LV.cpp  main.cpp
embedded/app/src/: bms_fault_checking.c  hv_io_expanders.c  init.c  load_software_parameters.c  lv_io_expanders.c  main.c  motor.c  motor.cpp  nav.c  nav.cpp  pressure_fault_checking.c  rms_fault_checking.c  state_machine.c  state_machine.cpp  states.c  states.cpp  transitions.c  transitions.cpp
embedded/app/state-machine/: IdleState.cpp  IdleState.h  State.h  StateMachine.cpp  StateMachine.h  States.h  TestState.cpp  TestState.h
embedded/drivers/: CMakeLists.txt  README.md
embedded/drivers/h/: can.h  i2c.h
embedded/drivers/include/: bbgpio.h  buart.h  can.h  i2c-dev.h  i2c.h  packet.h  uart.h
embedded/drivers/src/: bbgpio.c  buart.cpp  can.c  can.cpp  i2c.c  packet.cpp  uart.c
embedded/examples/: CMakeLists.txt  adcTest.cpp  bmsDisplay.cpp  brakingTest.c  brakingTest.cpp  can_test.c  can_test.cpp  dashTest.cpp  gpioHvTest.c  gpioHvTest.cpp  gpioIOXMortyTest.cpp  gpioIOXRickMortyTest.cpp  gpioIOXRickTest.cpp  gpioUtil.c  imu_test.c  imu_test.cpp  makefile  makefile_imu  motorTest.c  navTest.c  navTest.cpp  oldMotorTest.c  oldMotorTest.cpp  presTest.c  presTest.cpp  retroTest.c  run.cpp  solenoidTest.c  stateTest.c  stateTest.cpp  uartTest.cpp
embedded/examples/sims/: bms.py  canUtil.py  rms.py
embedded/examples/src/: can_test.c  imu_test.c
embedded/peripherals/: CMakeLists.txt  README.md
embedded/peripherals/h/: imu.h
embedded/peripherals/include/: NCD9830DBR2G.h  adc128.h  bms.h  boardTelem.h  braking.h  can_devices.h  hv_iox.h  imu.h  iox_morty.h  iox_rick.h  lv_iox.h  mcp23017.h  proc_iox.h  retro.h  rms.h  temp_adc.h  voltage_adc.h
embedded/peripherals/rms/: rms.c  rms.h
embedded/peripherals/src/: NCD9830DBR2G.c  Test_imu.cpp  adc128.cpp  adc_temp.h  batt.c  batt.cpp  bms.c  bms.cpp  boardTelem.cpp  braking.c  braking.cpp  can_devices.c  can_devices.cpp  hv_iox.c  hv_iox.c.deprecated  hv_iox.cpp  imu.c  imu.cpp  iox_morty.cpp  iox_rick.cpp  lv_iox.c  mcp23017.c  proc_iox.c  retro.c  rms.c  rms.cpp  temp_adc.cpp  testMcp23017.c  voltage_adc.cpp
embedded/utils/: CMakeLists.txt  README.md  gpioUtil.c  rmsProg.c  rmsProg.cpp  setupCAN.sh  validate_run_profile.py
middleware/: CMakeLists.txt  README.md
middleware/command-recv/: README.md
middleware/command-recv/example/: Makefile
middleware/command-recv/src/High_Voltage/: HVTCPSocket.cpp  HVTCPSocket.h
middleware/command-recv/src/Low_Voltage/: LVTCPSocket.cpp  LVTCPSocket.h
middleware/examples/: HV_Test.cpp  LV_DataLoop_test.cpp  LV_TCP_test.cpp  TCPServerTest.cpp  TelemetryLoopTest.cpp
middleware/include/: DataDump.h  HVTCPSocket.h  HVTelemetry_Loop.h  HV_Telem_Recv.h  LVTCPSocket.h  LVTelemetry_Loop.h  TCPServer.h  TelemetryLoop.h  connStat.h  data_dump.h
middleware/libs/Boost/: crc.hpp
middleware/libs/CRCpp/: CRC.h
middleware/libs/PracticalSocket/: PracticalSocket.cpp  PracticalSocket.h
middleware/libs/boost/: array.hpp  config.hpp  crc.hpp  cstdint.hpp
middleware/libs/boost/detail/: workaround.hpp
middleware/libs/boost/type_traits/: conditional.hpp  integral_constant.hpp
middleware/src/: DataDump.cpp  HVTCPSocket.cpp  HVTelemetry_Loop.cpp  HV_Telem_Recv.cpp  LVTCPSocket.cpp  LVTelemetry_Loop.cpp  PracticalSocket.cpp  TCPServer.cpp  TelemetryLoop.cpp  connStat.c  connStat.cpp  data_dump.cpp
middleware/telemetry-loop/: README.md
middleware/telemetry-loop/example/: Makefile  test.cpp
middleware/telemetry-loop/src/: PracticalSocket.cpp  PracticalSocket.h
middleware/telemetry-loop/src/High_Voltage/: HVTelemetry.cpp
middleware/telemetry-loop/src/Low_Voltage/: LVTelemetry.cpp  LVTelemetry.h
middleware/udp-library/: README.md  TelemetrySender.cpp
middleware/udp-library/example/: Makefile  test.cpp
middleware/udp-library/src/: TelemetrySender.cpp  TelemetrySender.h
middleware/udp-library/src/High_Voltage/: HVTelemetry.cpp  HVTelemetry.h
middleware/udp-library/src/Low_Voltage/: LVTelemetry.cpp  LVTelemetry.h
run_profiles/: README.md  active_run_profile.txt
tables/: index.html  main.css  main.js
toolchains/: beaglebone.cmake  (+1 more)
(+71 files in other folders)
